--- a/public/assets/admin/css/app.css
+++ b/public/assets/admin/css/app.css
@@ -1,33 +1,1 @@
-.table_image_link {
-  padding: 5px;
-}
-.table_image_link img {
-  max-width: 80px;
-  max-height: 80px;
-}
-
-.image_block {
-  position: relative;
-  display: inline-block;
-}
-.image_block .remove_image {
-  position: absolute;
-  right: -5px;
-  top: -10px;
-  font-size: 20px;
-  z-index: 1;
-  color: #dc3545;
-}
-.image_block .remove_image:hover {
-  cursor: pointer;
-  opacity: 0.6;
-}
-.image_block .remove_image:active {
-  opacity: 1;
-}
-.image_block img {
-  height: 100px;
-  width: 100px;
-  padding: 5px;
-  margin: 5px;
-}
+.table_image_link{padding:5px}.table_image_link img{max-width:80px;max-height:80px}.image_block{position:relative;display:inline-block}.image_block .remove_image{position:absolute;right:-5px;top:-10px;font-size:20px;z-index:1;color:#dc3545}.image_block .remove_image:hover{cursor:pointer;opacity:.6}.image_block .remove_image:active{opacity:1}.image_block img{height:100px;width:100px;padding:5px;margin:5px}
